--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,11 @@ body {
 .presentation {
     border: 1px solid white;
     border-radius: 10px;
+    transition: 0.3s ease-in-out;
+}
+
+.presentation:hover {
+    border: 1px solid rgb(183, 0, 255);
 }
 
 .presentation h1 {
@@ -54,4 +59,9 @@ hr {
 
 .connections ul li {
     margin: 1rem 0;
+    transition: 0.3s ease-in-out;
+}
+
+.connections ul li:hover {
+    transform: scale(1.2);
 }
